Assignment2_Zhao_Duo/tests/automated/tests/good/ScientificNotationBigBland-0.calc
a .0E23 b 1.E25 c 2.3E31 d 34.5E45 e 6.78E73 f 99.99E56 g 3E93 h 76E45
