Assignment2_Zhao_Duo/tests/automated/tests/bad/ScientificNotationBigMinusWithBadCharacters-0Chomped.calc
a .0%E-23 b 1.%E-25 c 2.3%E-31 d 34.5%E-45 e 6.78%E-73 f 99.99%E-56 g 3%E-93 h 76%E-45